# BreakOut

./: Makefile.in  NEWS  README.md  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in
data/levels/: Makefile.am  Makefile.in  lvl1  lvl2  lvl3  lvl4  lvl5
src/: Makefile.am  Makefile.in  ball-data.cc  ball-data.h  brick-data.cc  brick-data.h  collision-model-data.cc  collision-model-data.h  dir-reader.cc  dir-reader.h  env-vectorize.cc  env-vectorize.h  game-data.cc  game-data.h  graphics.cc  graphics.h  level-data.cc  level-data.h  main-window.cc  main-window.h  main.cc  math-vector2-d.cc  math-vector2-d.h  paddle-data.cc  paddle-data.h
